# metadata_driven_v4

./: .env.example  .gitignore  domain_knowledge.txt  main_variable.txt  pyproject.toml  validation_questions.txt  수정계획_0703.md  수정계획_답변품질_0703.md
docs/: ANSWER_STRUCTURE_FLOW_IMPLEMENTATION_PLAN_20260705.md  DATA_RETRIEVAL_SOURCES.md  DATA_RETRIEVER_AND_METADATA_STORAGE_FLOW_DESIGN.md  ENVIRONMENT_SETUP.md  FLOW_AUDIT_AND_V3_DESIGN.md  IMPLEMENTATION_CHECKPOINTS.md  LANGFLOW_IMPLEMENTATION_GUIDE.md  LANGFLOW_NODE_CONNECTION_GUIDE.md  METADATA_AUTHORING_FLOW_GUIDE.md  METADATA_SAVING_FLOW_GUIDE.md  MONGODB_JSON_UPLOAD_GUIDE.md  REBUILD_FUNCTIONAL_DESIGN.md  REIMPLEMENTATION_CONTEXT_DRAFT_20260612.md  ROUTED_RUN_FLOW_SESSION_WIRING_GUIDE.md  ROUTER_FLOW_IMPLEMENTATION_PLAN_20260704.md  ROUTER_SMART_ROUTER_NEXT_IMPROVEMENT_PLAN_20260704.md  SERVICE_READINESS_AUDIT.md  V2_DELIVERY_VALIDATION_REPORT.md  VALIDATION_QUESTIONS_AND_EXPECTED_BEHAVIOR.md  WEB_IMPLEMENTATION_GUIDE.md
metadata_exports/: mongodb_metadata_export_20260701_130231.json  mongodb_metadata_export_20260701_130457.json
reference_runtime/: contracts.py  dummy_data.py  metadata_authoring.py  metadata_saving.py  retrieval.py
tests/: test_langflow_components.py  test_metadata_authoring.py  test_metadata_saving.py  test_web_app_v4_contracts.py
tools/: export_mongodb_metadata_to_json.py  metadata_authoring_dry_run.py  upload_json_to_mongodb.py  validate_representative_questions.py  validate_token_match_variants.py
web_app/: app.py  langflow_client.py  mock_api.py  ui_helpers.py
(+170 files in other folders)
